# noladder

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  LICENSE  PYTHON_SETUP.md  README.md  machine.toml  noladder_mock_bus  noladder_monitor
docs/: ARCHITECTURE.md  DESIGN.md  UserGuide.md
examples/basic_io/: machine.toml  main.rs  slave.rs
examples/hello_world/: bus_main.rs  machine.toml  main.rs  os_main.rs  slave.rs
src/: lib.rs  main.rs
src/bus/: cia402.rs  ethercat.rs  mod.rs  modbus.rs
src/config/: loader.rs  mod.rs
src/core/: arena.rs  cycle.rs  io_image.rs  mailbox.rs  mod.rs  os_server.rs  rung.rs  shared_memory.rs
src/os/: mod.rs  payload.rs
tools/: ad_mit_lic.sh  launch_hello_world.sh  mock_noladder.py  noladder_mock_bus.py  noladder_monitor.py  setup.sh  setup_venv.sh  test_lxd.sh
tools/tests/: test_monitor.py
